Fix dropdown menu z-index

--- a/templates/frontOffice/default/assets/less/theme.less
+++ b/templates/frontOffice/default/assets/less/theme.less
@@ -15,11 +15,15 @@
         }
     }
     
-    .dropdown-menu > li {
-        a {
-            &:hover,
-            &:focus {
-                background: #f49a17;                
+    .dropdown-menu {
+        z-index: 1010;
+        
+        > li {
+            a {
+                &:hover,
+                &:focus {
+                    background: #f49a17;
+                }
             }
         }
     }
